Revert "fix: increased z-index"
This reverts commit 1b7518b1f3e9c47244a1fe7f9a1ef4b2dce72517.

--- a/components/forms/form.module.css
+++ b/components/forms/form.module.css
@@ -11,6 +11,7 @@
 .border {
   position: relative;
   padding: 16px 8px 8px;
+  border: 10px solid rgb(255 255 255);
   border-radius: 10px;
   margin-top: 32px;
   margin-bottom: 80px;
@@ -24,7 +25,7 @@
 
 .handle_top {
   position: absolute;
-  top: -25px;
+  top: -35px;
   left: 50%;
   width: 160px;
   height: 30px;
