--- a/components/overlay/overlay.module.css
+++ b/components/overlay/overlay.module.css
@@ -1,6 +1,6 @@
 .overlay {
   position: fixed;
-  z-index: 15;
+  z-index: 1;
   top: 0;
   right: 0;
   bottom: 0;
